--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -23,7 +23,9 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="date_of_birth"/>
                             <field name="age"/>
+                            <field name="appointment_id"/>
                         </group>
                         <group>
                             <field name="ref"/>
@@ -54,13 +56,16 @@
                 <field name="gender"/>
                 <filter name="male_filter" string="Male" domain="[('gender','=','male')]"/>
                 <filter name="filter_female" string="Female" domain="[('gender','=','female')]"/>
-                <separator/>
-                <filter name="filter_kids" string="Kids" domain="[('age','&lt;=',5)]"/>
+<!--                <separator/>-->
+<!--                <filter name="filter_kids" string="Kids" domain="[('age','&lt;=',5)]"/>-->
                 <separator/>
                 <filter name="filter_active" string="Active" domain="[('active','=',False)]"/>
                 <group expand="0" string="Group By">
                     <filter string="Gender" name="group_by_gender" context="{'group_by':'gender'}"/>
                 </group>
+                <searchpanel>
+                        <field name="gender" icon="fa-users" select="multi" enable_counters="1"/>
+                    </searchpanel>
             </search>
         </field>
     </record>
@@ -79,8 +84,8 @@
     </record>
 
     <menuitem id="menu_patient"
-              name="Patient"
+              name="Patients"
               action="action_hospital_patient"
               parent="menu_patient_master"
-              sequence="0"/>
+              sequence="1"/>
 </odoo>
