--- a/custom_addons/om_hospital/wizard/cancel_appointment_wizard.xml
+++ b/custom_addons/om_hospital/wizard/cancel_appointment_wizard.xml
@@ -7,10 +7,11 @@
             <form>
                 <group>
                     <group>
-                        <field name="appointment_id"/>
+                        <field name="appointment_id" invisible="context.get('hide_appointment')"/>
                         <field name="reason"/>
                     </group>
                     <group>
+                        <field name="date_cancel"/>
                     </group>
                 </group>
                 <footer>
