--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -94,7 +94,7 @@
                     <group>
                         <group>
                             <field name="patient_id" default_focus="1"/>
-                            <field name="ref"/>
+                            <field name="ref" readonly="1" force_save="1"/> <!-- force_save .. -->
                             <field name="gender"/>
                             <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="booking_date"/>
