--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -32,8 +32,8 @@
                         class="fa fa-times btn-danger"
                 /><!-- Thêm các button vào phần tree view  và sẽ ẩn khi mà các state  khác draft và in_Consultation -->
                 <groupby name="patient_id">
-                    <button name="action_test" string ="Click me" type="object" class="oe_highlight"/>
-                    <button name="edit" string ="edit" type="edit" />
+                    <button name="action_test" string="Click me" type="object" class="oe_highlight"/>
+                    <button name="edit" string="edit" type="edit"/>
                 </groupby> <!-- Add button vào group by -->
             </tree>
         </field>
@@ -98,6 +98,7 @@
                             <field name="gender"/>
                             <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="booking_date"/>
+                            <field name="operator_id"/>
                         </group>
                         <group>
                             <field name="hide_sales_price" groups="base.group_no_one"/>
