--- a/custom_addons/om_hospital/views/operation_view.xml
+++ b/custom_addons/om_hospital/views/operation_view.xml
@@ -5,6 +5,7 @@
         <field name="model">hospital.operation</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="operation_name"/>
                 <field name="doctor_id"/>
             </tree>
         </field>
@@ -16,7 +17,10 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <field name="doctor_id"/>
+                    <group>
+                        <field name="operation_name"/>
+                        <field name="doctor_id"/>
+                    </group>
                 </sheet>
                 <!-- Chatter -->
             </form>
