--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -22,6 +22,11 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button" type="object" name="action_view_appointments" icon="fa-star">
+                            <field string="Appointment" name="appointment_count" widget='statinfo'/>
+                        </button>
+                    </div>
                     <div class="alert alert-info text-center o_form_header" role="alert" attrs="{'invisible': [('is_birthday','=',False)]}"> <!-- Show alter trong form -->
                         <a class="close" data-dismiss="alert" href="#">x</a>
                         <div>
